<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="@id/topBarLayout"
            app:layout_constraintTop_toTopOf="@id/topBarLayout"
            app:layout_constraintBottom_toBottomOf="@id/topBarLayout"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bold_border_layout"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintEnd_toEndOf="@id/topBarLayout"
            app:layout_constraintTop_toTopOf="@id/topBarLayout"
            app:layout_constraintBottom_toBottomOf="@+id/topBarLayout"
            android:layout_margin="5dp">
            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:hint="@string/search_hint"
                android:background="@drawable/rounded_border_layout"
                android:padding="0dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15sp"
                android:inputType="text"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/searchBar"
                app:layout_constraintEnd_toStartOf="@+id/btnSearch"
                app:layout_constraintTop_toTopOf="@id/searchBar"
                app:layout_constraintBottom_toBottomOf="@id/searchBar"
                />

            <ImageButton
                android:id="@+id/btnSearch"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search"
                android:scaleType="fitXY"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="@id/searchBar"
                app:layout_constraintTop_toTopOf="@id/searchBar"
                app:layout_constraintBottom_toBottomOf="@+id/searchBar"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCoin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBarLayout"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:labelVisibilityMode="unlabeled"/>
</androidx.constraintlayout.widget.ConstraintLayout>