<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.MainActivity">

    <TextView
            android:id="@+id/tvHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#E4DFDF"
            android:padding="16dp"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/summaryLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeader">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_weight="1">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    >
                <TextView
                        android:id="@+id/tvTotalCoins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_coins_stats"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        />
                <TextView
                        android:id="@+id/tvTotalCoinsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="40233"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:layout_marginStart="5dp"
                        android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/tvTotalMarketCap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_market_cap_stats"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="14sp" />
                <TextView
                        android:id="@+id/currencySymbolTotalMarketCapValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:layout_marginStart="5dp"/>
                <TextView
                        android:id="@+id/tvTotalMarketCapValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2434.2B"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:layout_marginStart="1dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/tvTotalMarketplace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_marketplace_stats"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="14sp" />
                <TextView
                        android:id="@+id/tvTotalMarketplaceValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="40233"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:layout_marginStart="5dp"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/tvVol24h"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vol_24h_stats"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:textSize="14sp" />
                <TextView
                        android:id="@+id/currencySymbolVol24hValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$"
                        android:textColor="#000000"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:textSize="14sp" />
                <TextView
                        android:id="@+id/tvVol24hValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="63.8B"
                        android:textColor="#000000"
                        android:layout_marginStart="1dp"
                        android:textStyle="bold"
                        android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/filterLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summaryLayout">

        <Spinner
                android:id="@+id/spinnerCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/filterLayout"
                app:layout_constraintTop_toTopOf="@id/filterLayout"
                app:layout_constraintBottom_toBottomOf="@id/filterLayout"
                />

        <Spinner
                android:id="@+id/spinnerTimePeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/spinnerCurrency"
                app:layout_constraintEnd_toEndOf="@+id/spinnerOrderBy"
                app:layout_constraintTop_toTopOf="@+id/filterLayout"
                app:layout_constraintBottom_toBottomOf="@id/filterLayout"
                />

        <Spinner
                android:id="@+id/spinnerOrderBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/filterLayout"
                app:layout_constraintTop_toTopOf="@+id/filterLayout"
                app:layout_constraintBottom_toBottomOf="@id/filterLayout"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCoin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterLayout"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/bottom_navigation_menu"
            app:labelVisibilityMode="unlabeled"/>

</androidx.constraintlayout.widget.ConstraintLayout>