<!-- res/layout/item_coin.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/rounded_border_layout"
    android:elevation="4dp"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/coinIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_img_unavailable"
        android:contentDescription="@string/coin_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/coinSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BTC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/coinIcon"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/coinName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bitcoin"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/coinIcon"
        app:layout_constraintTop_toBottomOf="@id/coinSymbol"
        app:layout_constraintBottom_toTopOf="@id/marketCap"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/marketCap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_cap"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/coinIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/currencySymbolMarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/marketCap"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="3dp"/>
    <TextView
        android:id="@+id/marketCapValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1255.5B"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/currencySymbolMarket"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="1dp"
        />

    <ImageButton
        android:id="@+id/favouriteButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitXY"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/currencySymbolPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/coinPrice"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"/>
    <TextView
        android:id="@+id/coinPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="63604.67"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/favouriteButton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/coinPriceChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-0.70%"
        android:textSize="14sp"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toStartOf="@id/currencySymbolPrice"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"/>
    <ImageView
        android:id="@+id/coinPriceChangeImg"
        android:layout_width="14sp"
        android:layout_height="14sp"
        android:src="@drawable/ic_down"
        app:layout_constraintEnd_toStartOf="@id/coinPriceChange"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="5dp"/>


    <TextView
            android:id="@+id/currencySymbolVolumeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/volumeValue"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="1dp"/>
    <TextView
        android:id="@+id/volumeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="28.1B"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/volume24h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toStartOf="@id/currencySymbolVolumeValue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="3dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
